# ampel

./: .ampel-i18n.example.yaml  .dockerignore  .env.example  .env.monitoring.example  .gitignore  .lycheeignore  .markdownlint-cli2.jsonc  .markdownlint.json  .markdownlintignore  .prettierignore  .prettierrc  .release-please-manifest.json  .secretlintignore  .yamllint.yml  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  Makefile.monitoring  README.md  codecov.yml  deny.toml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-please-config.json
crates/ampel-api/: Cargo.toml  build.rs
crates/ampel-api/locales/ar/: common.yml  errors.yml  providers.yml  validation.yml
crates/ampel-api/locales/cs/: errors.yml  providers.yml  validation.yml
crates/ampel-api/locales/da/: errors.yml  providers.yml  validation.yml
crates/ampel-api/locales/de/: errors.yml  providers.yml  validation.yml
crates/ampel-api/locales/en/: common.yml  errors.yml  providers.yml  validation.yml
crates/ampel-api/locales/en-GB/: common.yml  errors.yml  providers.yml  validation.yml
crates/ampel-api/locales/es-ES/: errors.yml  providers.yml  validation.yml
crates/ampel-api/locales/es-MX/: errors.yml  providers.yml  validation.yml
crates/ampel-api/locales/fi/: errors.yml  providers.yml  validation.yml
crates/ampel-api/locales/fr/: errors.yml  providers.yml  validation.yml
crates/ampel-api/locales/he/: errors.yml  providers.yml  validation.yml
crates/ampel-api/locales/hi/: errors.yml  providers.yml  validation.yml
crates/ampel-api/locales/it/: common.yml  errors.yml  providers.yml  validation.yml
crates/ampel-api/locales/ja/: errors.yml  providers.yml  validation.yml
crates/ampel-api/locales/ko/: errors.yml  providers.yml  validation.yml
crates/ampel-api/locales/nl/: errors.yml  providers.yml  validation.yml
crates/ampel-api/locales/no/: errors.yml  providers.yml  validation.yml
crates/ampel-api/locales/pl/: errors.yml  providers.yml  validation.yml
crates/ampel-api/locales/pt-BR/: errors.yml  providers.yml  validation.yml
crates/ampel-api/locales/ru/: errors.yml  providers.yml  validation.yml
crates/ampel-api/locales/sr/: errors.yml  providers.yml  validation.yml
crates/ampel-api/locales/sv/: errors.yml  providers.yml  validation.yml
crates/ampel-api/locales/th/: errors.yml  providers.yml  validation.yml
crates/ampel-api/locales/tr/: errors.yml  providers.yml  validation.yml
crates/ampel-api/locales/vi/: errors.yml  providers.yml  validation.yml
crates/ampel-api/locales/zh-CN/: errors.yml  providers.yml  validation.yml
crates/ampel-api/locales/zh-TW/: common.yml  errors.yml  providers.yml  validation.yml
crates/ampel-api/src/: cache.rs  config.rs  docs.rs  i18n_backend.rs  lib.rs  main.rs  observability.rs  state.rs
crates/ampel-api/src/extractors/: auth.rs  mod.rs  validated.rs
crates/ampel-api/src/handlers/: accounts.rs  analytics.rs  auth.rs  bot_rules.rs  bulk_merge.rs  connections.rs  dashboard.rs  diff_types.rs  mod.rs  model_accounts.rs  model_catalog.rs  notifications.rs  oauth.rs  pr_filters.rs  pull_requests.rs  pull_requests_diff.rs  remediation.rs  remediation_playbooks.rs  remediation_runs.rs  repositories.rs  repository_filters.rs  security.rs  social_auth.rs  teams.rs  user_preferences.rs  user_settings.rs
crates/ampel-api/src/middleware/: locale.rs  locale_layer.rs  metrics.rs  mod.rs  rate_limit.rs
crates/ampel-api/src/routes/: mod.rs
crates/ampel-api/tests/: auth_tests.rs  test_accounts.rs  test_bot_rules.rs  test_bulk_merge.rs  test_dashboard.rs  test_dashboard_comprehensive.rs  test_dashboard_performance.rs  test_dashboard_visibility.rs  test_git_diff_integration.rs  test_model_accounts.rs  test_model_catalog.rs  test_observability_comprehensive.rs  test_playbooks.rs  test_pr_filters.rs  test_pull_requests.rs  test_remediation.rs  test_remediation_runs.rs  test_repositories.rs  test_teams.rs
crates/ampel-api/tests/common/: mod.rs
crates/ampel-api/tests/i18n/: test_locale_middleware.rs  test_migration.rs  test_user_preferences.rs
crates/ampel-api/tests/integration/: diff_tests.rs
crates/ampel-core/: Cargo.toml
crates/ampel-core/src/: errors.rs  lib.rs
crates/ampel-core/src/models/: ampel_status.rs  mod.rs  pull_request.rs  repository.rs  user.rs
crates/ampel-core/src/remediation/: consolidation.rs  db.rs  failure_classifier.rs  fingerprint.rs  mod.rs  model_catalog.rs  model_provider.rs  policy.rs  run.rs
crates/ampel-core/src/services/: auth_service.rs  learning_signal.rs  mod.rs  notification_service.rs  (+8 more)
crates/ampel-db/: Cargo.toml
crates/ampel-db/src/: encryption.rs  lib.rs
crates/ampel-db/tests/: provider_account_queries_test.rs
crates/ampel-i18n-builder/: .env.example  CHANGELOG.md  Cargo.toml  DOTENV_IMPLEMENTATION.md  README.md  build.rs
crates/ampel-i18n-builder/docs/: RECURSIVE_TRANSLATION_ENHANCEMENT.md  TRANSLATION_API_INTEGRATION.md  env-configuration.md
crates/ampel-i18n-builder/examples/: generate_code.rs  translation_api_usage.rs
crates/ampel-i18n-builder/src/: config.rs  error.rs  lib.rs  main.rs
crates/ampel-i18n-builder/tests/: PHASE_8_SUMMARY.md  QUICK_START.md  README.md  TEST_DOCUMENTATION.md  cli_dotenv_integration.rs  config_tests.rs  final_integration_tests.rs  recursive_translation.rs  test_dotenv_loading.rs
crates/ampel-providers/: Cargo.toml
crates/ampel-providers/src/: bitbucket.rs  error.rs  factory.rs  github.rs  gitlab.rs  lib.rs  mock.rs  remediation.rs  traits.rs  utils.rs
crates/ampel-providers/tests/: bitbucket_remediation_tests.rs  bitbucket_tests.rs  diff_tests.rs  github_remediation_tests.rs  github_tests.rs  gitlab_remediation_tests.rs  mock_provider_tests.rs  mock_remediation_tests.rs
crates/ampel-worker/: Cargo.toml
crates/ampel-worker/playbooks/: default.yaml
crates/ampel-worker/src/: lib.rs  main.rs  observability.rs
crates/ampel-worker/tests/: agentic_tier_tests.rs  cleanup_tests.rs  health_score_tests.rs  metrics_collection_tests.rs  poll_repository_tests.rs  remediation_executor_tests.rs  remediation_parity_tests.rs
(+1259 files in other folders)
