[package]
name = "ampel-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
openapi = []

[[bin]]
name = "ampel-api"
path = "src/main.rs"

[dependencies]
# Async
tokio.workspace = true
async-trait.workspace = true

# Web framework
axum.workspace = true
axum-extra.workspace = true
tower.workspace = true
tower-http.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Validation
validator.workspace = true

# Database
sea-orm.workspace = true

# HTTP Client
reqwest.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
config.workspace = true
dotenvy.workspace = true
url.workspace = true

# Caching
redis.workspace = true

# Metrics
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
metrics-util.workspace = true

# Auth
jsonwebtoken.workspace = true

# API Documentation
utoipa.workspace = true
utoipa-swagger-ui.workspace = true

# Email
lettre.workspace = true

# Internationalization
rust-i18n = "3.0"
serde_yaml = "0.9"
cookie = "0.18"

# Internal
ampel-core.workspace = true
ampel-db.workspace = true
ampel-providers.workspace = true
ampel-i18n-builder = { path = "../ampel-i18n-builder" }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tower = { workspace = true, features = ["util"] }
sea-orm-migration.workspace = true
futures = "0.3"
