[package]
name = "ampel-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Async
tokio.workspace = true
async-trait.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Validation
validator.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true

# Auth
jsonwebtoken.workspace = true
argon2.workspace = true
rand.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
