[package]
name = "ampel-db"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Async
tokio.workspace = true
async-trait.workspace = true

# Database
sea-orm.workspace = true
sea-orm-migration.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true

# Encryption
aes-gcm.workspace = true
base64.workspace = true
rand.workspace = true

# Internal
ampel-core.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
