[package]
name = "ampel-i18n-builder"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "CLI tool and library for building i18n translations using AI providers"
repository = "https://github.com/pacphi/ampel"
readme = "README.md"
keywords = ["i18n", "localization", "translation", "cli"]
categories = ["command-line-utilities", "internationalization"]

[[bin]]
name = "ampel-i18n"
path = "src/main.rs"

[lib]
name = "ampel_i18n_builder"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1.49", features = ["full"] }
async-trait = "0.1"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Configuration
config = "0.14"
toml = "0.8"

# Caching
redis = { version = "0.28", optional = true }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Utilities
chrono = "0.4"
regex = "1.12"
colored = "2.2"
indicatif = "0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
secrecy = "0.10"
dotenv = "0.15"

# String extraction
sha2 = "0.10"
hex = "0.4"
glob = "0.3"
walkdir = "2.5"

# Code refactoring - TypeScript/React with OXC (stable Rust, production-ready)
oxc_parser = "0.40"
oxc_ast = "0.40"
oxc_span = "0.40"
oxc_allocator = "0.40"

# Code refactoring - Rust with Syn (industry standard, stable Rust)
syn = { version = "2.0", features = ["full", "visit-mut", "extra-traits", "parsing"] }
quote = "1.0"
prettyplease = "0.2"
proc-macro2 = "1.0"

# Rate limiting and caching
governor = "0.6"
nonzero_ext = "0.3"
lru = "0.16"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.7"
tempfile = "3.24"

[features]
default = []
redis-cache = ["redis"]
integration-tests = [] # Enable feature-gated tests that make real API calls
