[package]
name = "ampel-providers"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Async
tokio.workspace = true
async-trait.workspace = true

# HTTP client
reqwest.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Utilities
chrono.workspace = true
thiserror.workspace = true
urlencoding = "2"
base64.workspace = true

# Internal
ampel-core.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
wiremock = "0.6"

[features]
test-utils = []
