[package]
name = "ampel-worker"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ampel-worker"
path = "src/main.rs"

[dependencies]
# Async
tokio.workspace = true
async-trait.workspace = true

# Background jobs
apalis.workspace = true
apalis-cron.workspace = true

# Database
sea-orm.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
config.workspace = true
dotenvy.workspace = true

# Internal
ampel-core.workspace = true
ampel-db.workspace = true
ampel-providers.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
