[package]
name = "ampel-worker"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "ampel-worker"
path = "src/main.rs"

[dependencies]
# Async
tokio.workspace = true
async-trait.workspace = true

# Background jobs
apalis.workspace = true
apalis-cron.workspace = true

# Database
sea-orm.workspace = true

# Metrics (Prometheus scrape endpoint + counters/histograms)
metrics.workspace = true
metrics-exporter-prometheus = { workspace = true, features = ["http-listener"] }

# Serialization
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"

# HTTP client for hosted/local model providers (Claude/Gemini/Ollama).
reqwest.workspace = true

# Exact decimal money math for model cost/spend accounting (never f64).
rust_decimal = { version = "1", features = ["serde"] }

# Playbook templating (STRICT undefined) + embedded default playbook asset.
minijinja = "2"
rust-embed = "8"

# ONNX local classifier (ADR-009/012). Feature-gated OFF by default: the `ort`
# native runtime is not available on CI runners, so the whole onnx path (the
# OnnxClassifierProvider + the cascade's L2 stage) compiles out unless the
# `onnx` feature is enabled.
ort = { version = "=2.0.0-rc.10", optional = true }
ndarray = { version = "0.16", optional = true }

# Vector-backed reflexion memory (Phase 5b+). Feature-gated OFF by default
# (mirrors `onnx`): default-features disabled so NO egress (`api-embeddings` =
# reqwest), NO native SIMD (`simd` = simsimd), NO ONNX (`onnx-embeddings` = ort).
# Only the pure-Rust HNSW index (`hnsw` -> hnsw_rs) + in-memory store
# (`memory-only`) are pulled — air-gap-safe and CI-buildable.
ruvector-core = { version = "2.2.3", default-features = false, features = [
    "hnsw",
    "memory-only",
], optional = true }

# Utilities
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
config.workspace = true
dotenvy.workspace = true

# Internationalization
rust-i18n = "3.1"

# Internal
ampel-core.workspace = true
ampel-db.workspace = true
ampel-providers.workspace = true

[features]
default = []
# Enables the local ONNX classifier (L2 cascade stage). OFF in CI: pulls the
# `ort`/`ndarray` native stack. `--all-features` WILL enable this; if `ort`
# cannot build in the current environment, verify the default feature set
# instead (see crate docs / slice-2 report).
onnx = ["dep:ort", "dep:ndarray"]
# Enables the vector-backed reflexion memory (VectorReflexionMemory). OFF by
# default and NOT in `default`: when off, ruvector-core is not compiled and the
# deterministic learning_signal bias is the sole decision path. Air-gap-safe.
reflexion = ["dep:ruvector-core"]

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
sea-orm-migration.workspace = true
# Enable the in-process fakes for CI-safe integration tests (no DB/container/network):
# ampel-core's FakeSandboxRunner and ampel-providers' MockProvider.
ampel-core = { workspace = true, features = ["test-utils"] }
ampel-providers = { workspace = true, features = ["test-utils"] }
